<resources>
    <string name="app_name">Point Of Sale</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Item ordered</string>
    <string name="name_format">Name: %s</string>
    <string name="quantity_format">Quantity: %d</string>
    <string name="date_format">Delivery date: %s</string>
    <string name="name_start">Name</string>
    <string name="quantity_start">Quantity</string>
    <string name="date_start">Delivery date</string>
    <string name="reset">Reset</string>
    <string name="remove">Remove</string>
    <string name="confirmation_dialog_message">Are you sure you want to remove all items?</string>
    <string name="edit">Edit</string>
    <string name="item_cleared">Item cleared</string>
    <string name="undo">UNDO</string>
    <string name="item_restored">Item is restored</string>
    <string name="add_new_item">Add a new item</string>

    <string name="dialog_item_name_label">What do you want to buy?</string>
    <string name="dialog_name_hint">Item name</string>
    <string name="dialog_quantity_label">Quantity</string>
    <string name="dialog_calendar_label">Delivery Date</string>
    <string name="search">Search</string>
    <string name="choose_an_item">Choose an item</string>
    <string name="clear_all">Clear All</string>
    <string name="are_you_sure">Are you sure you want to clear all the items?  This cannot be undone.</string>


</resources>
