<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="edu.rosehulman.fisherds.pointofsale.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search_history"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
</menu>
